--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -55,3 +55,7 @@ jobs:
       - name: Run pre-commit
         run: |
           pre-commit run --all-files --color always --verbose --show-diff-on-failure
+
+      - name : Run tests
+        run: |
+          pytest tests/test_graph_utils.py
