--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,4 +57,6 @@ jobs:
 
       - name: Run test3
         run: |
+            pytest tests/autotests/test_task2.py
             pytest tests/autotests/test_task3.py
+            pytest tests/autotests/test_task4.py
