--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,3 +60,4 @@ jobs:
             pytest tests/autotests/test_task2.py
             pytest tests/autotests/test_task3.py
             pytest tests/autotests/test_task4.py
+            pytest tests/autotests/test_task6.py
