--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,3 +61,4 @@ jobs:
             pytest tests/autotests/test_task3.py
             pytest tests/autotests/test_task4.py
             pytest tests/autotests/test_task6.py
+            pytest tests/autotests/test_task7.py
